force-app/main/default/objects/SIT_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Opportunity_Owner__c</fullName>
        <description>this is the default owner for opportunities loaded thru the SIT tool</description>
        <label>Default Opportunity Owner</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Days_For_Commission__c</fullName>
        <label>Num Days For Commission</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>This field is used for setting the Vetify Opportunities. It really is &quot;Vetify Opportunity Owner&quot;</description>
        <label>Opportunity Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SIT Settings</label>
    <listViews>
        <fullName>More_View</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Num_Days_For_Commission__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Default_Opportunity_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>More View</label>
    </listViews>
</CustomObject>